--- a/IsEmirleri.Web/Views/Priority/Index.cshtml
+++ b/IsEmirleri.Web/Views/Priority/Index.cshtml
@@ -29,7 +29,7 @@
 
                 <form id="frmPriority" class="needs-validate" data-parsley-validate>
                 <div class="mb-3 row">
-                        <input type="text" class="form-control" id="txtPriorityname" required data-parsley-required-message="Bu alan zorunludur." data-parsley-minlength="3" data-parsley-pattern="^[a-zA-Z]+$" placeholder="Öncelik adı giriniz">
+                        <input type="text" class="form-control" id="txtPriorityname" required data-parsley-required-message="Bu alan zorunludur." data-parsley-minlength="3" placeholder="Öncelik adı giriniz">
 
                 </div>
              
