Görev listeleme sayfasındaki tabloya durum kolonu da eklendi.

--- a/IsEmirleri.Web/Views/Mission/Index.cshtml
+++ b/IsEmirleri.Web/Views/Mission/Index.cshtml
@@ -80,6 +80,7 @@
                     { data: 'title', title: 'Başlık' },
                     { data: 'description', title: 'Açıklama' },
                     { data: 'project.name', title: 'Bulunduğu Proje' },
+                    { data: 'status.name', title: 'Durum' },
                     { data: 'priority.name', title: 'Öncelik' },
                     {
                         data: 'id',
