--- a/IsEmirleri.Web/Views/Mission/Index.cshtml
+++ b/IsEmirleri.Web/Views/Mission/Index.cshtml
@@ -1,10 +1,13 @@
 ﻿﻿<div class="row">
     <div class="col-12">
+        
         <div class="card">
             <div class="card-header bg-soft-success text-dark text-center d-flex">
+                <div><a class="btn btn-dark btn-sm" asp-controller="Mission" asp-action="GetAllOnBoard"><i class="uil-clapper-board"></i><br />Board</a></div>
                 <div class="col-10 text-center fs-3 text-dark"><i class="dripicons-pencil"></i>   Görevler</div>
                 <div class="col-2 fs-3">
                     <button id="btnAdd" class="btn btn-success"><i class="uil uil-plus me-2"></i>Yeni Kayıt</button>
+                    
                 </div>
             </div>
             <div class="card-body">
@@ -82,6 +85,7 @@
                     { data: 'project.name', title: 'Bulunduğu Proje' },
                     { data: 'status.name', title: 'Durum' },
                     { data: 'priority.name', title: 'Öncelik' },
+                    { data: 'assignees.email', title: 'Görev Sahibi' },
                     {
                         data: 'id',
                         title: 'İşlemler',
