--- a/IsEmirleri.Web/Views/Shared/_Layout.cshtml
+++ b/IsEmirleri.Web/Views/Shared/_Layout.cshtml
@@ -97,91 +97,28 @@
                             </form>
                         </div>
                     </div>
-
                     <div class="dropdown d-inline-block">
-                        <button type="button" class="btn header-item noti-icon waves-effect" id="page-header-notifications-dropdown"
-                                data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            <i class="uil-bell"></i>
-                            <span class="badge bg-danger rounded-pill">3</span>
-                        </button>
-                        <div class="dropdown-menu dropdown-menu-lg dropdown-menu-end p-0"
-                             aria-labelledby="page-header-notifications-dropdown">
-                            <div class="p-3">
-                                <div class="row align-items-center">
-                                    <div class="col">
-                                        <h5 class="m-0 font-size-16"> Notifications </h5>
-                                    </div>
-                                    <div class="col-auto">
-                                        <a href="#!" class="small"> Mark all as read</a>
-                                    </div>
+                    <button type="button" class="btn header-item noti-icon waves-effect" id="page-header-notifications-dropdown"
+                            data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <i class="uil-bell"></i>
+                        <span class="badge bg-danger rounded-pill" id="notificationCount"></span>
+                    </button>
+                    <div class="dropdown-menu dropdown-menu-lg dropdown-menu-end p-0"
+                         aria-labelledby="page-header-notifications-dropdown">
+                        <div class="p-3">
+                            <div class="row align-items-center">
+                                <div class="col">
+                                    <h5 class="m-0 font-size-16"> Bildirimler </h5>
+                                </div>
+                                <div class="col-auto">
+                                    <a href="#!" class="small"> Mark all as read</a>
                                 </div>
                             </div>
-                            <div data-simplebar style="max-height: 230px;">
-                                <a href="javascript:void(0);" class="text-dark notification-item">
-                                    <div class="d-flex align-items-start">
-                                        <div class="flex-shrink-0 me-3">
-                                            <div class="avatar-xs">
-                                                <span class="avatar-title bg-primary rounded-circle font-size-16">
-                                                    <i class="uil-shopping-basket"></i>
-                                                </span>
-                                            </div>
-                                        </div>
-                                        <div class="flex-grow-1">
-                                            <h6 class="mb-1">Your order is placed</h6>
-                                            <div class="font-size-12 text-muted">
-                                                <p class="mb-1">If several languages coalesce the grammar</p>
-                                                <p class="mb-0"><i class="mdi mdi-clock-outline"></i> 3 min ago</p>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </a>
-                                <a href="javascript:void(0);" class="text-dark notification-item">
-                                    <div class="d-flex align-items-start">
-                                        <div class="flex-shrink-0 me-3">
-                                            <img src="~/assets/images/users/avatar-3.jpg" class="rounded-circle avatar-xs" alt="user-pic">
-                                        </div>
-                                        <div class="flex-grow-1">
-                                            <h6 class="mb-1">James Lemire</h6>
-                                            <div class="font-size-12 text-muted">
-                                                <p class="mb-1">It will seem like simplified English.</p>
-                                                <p class="mb-0"><i class="mdi mdi-clock-outline"></i> 1 hour ago</p>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </a>
-                                <a href="javascript:void(0);" class="text-dark notification-item">
-                                    <div class="d-flex align-items-start">
-                                        <div class="flex-shrink-0 me-3">
-                                            <div class="avatar-xs">
-                                                <span class="avatar-title bg-success rounded-circle font-size-16">
-                                                    <i class="uil-truck"></i>
-                                                </span>
-                                            </div>
-                                        </div>
-                                        <div class="flex-grow-1">
-                                            <h6 class="mb-1">Your item is shipped</h6>
-                                            <div class="font-size-12 text-muted">
-                                                <p class="mb-1">If several languages coalesce the grammar</p>
-                                                <p class="mb-0"><i class="mdi mdi-clock-outline"></i> 3 min ago</p>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </a>
-
-                                <a href="javascript:void(0);" class="text-dark notification-item">
-                                    <div class="d-flex align-items-start">
-                                        <div class="flex-shrink-0 me-3">
-                                            <img src="~/assets/images/users/avatar-4.jpg" class="rounded-circle avatar-xs" alt="user-pic">
-                                        </div>
-                                        <div class="flex-grow-1">
-                                            <h6 class="mb-1">Salena Layfield</h6>
-                                            <div class="font-size-12 text-muted">
-                                                <p class="mb-1">As a skeptical Cambridge friend of mine occidental.</p>
-                                                <p class="mb-0"><i class="mdi mdi-clock-outline"></i> 1 hours ago</p>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </a>
+                        </div>
+                        <div class="simplebar-content-wrapper" style="height: auto; overflow: hidden scroll;">
+                            <div class="simplebar-content" style="padding: 0px;">
+                                <div data-simplebar id="notificationList" style="max-height: 230px;">
+                                </div>
                             </div>
                             <div class="p-2 border-top">
                                 <div class="d-grid">
@@ -190,6 +127,8 @@
                                     </a>
                                 </div>
                             </div>
+                       
+                        </div>
                         </div>
                         @* assets/images/users/avatar-4.jpg *@
                        @*  /Files/UserPhotos/@User.FindFirst(ClaimTypes.Actor) *@
@@ -298,5 +237,61 @@
 </html>
 
 <partial name="_PluginsPartial.cshtml" />
+
+<script>
+    
+    $(document).ready(() => {
+        getCount();
+        getNotification();
+
+    })
+
+    async function getCount() {
+        await fetch("https://localhost:7207/api/Notification/NotificationWithNotRead/3").then((res) => res.json()).then((data) => {
+            $("#notificationCount").text(data);
+        })
+    }
+
+
+    async function getNotification() {
+        await fetch("https://localhost:7207/api/Notification").then((res)=>res.json()).then((data)=>{
+
+            $("#notificationList").empty();
+            data.map(item=>
+
+                $("#notificationList").append(`
+
+                        <a href="javascript:void(0);" class="text-dark notification-item">
+                                                <div class="d-flex align-items-start">
+                                                    <div class="flex-shrink-0 me-3">
+                                                        <div class="avatar-xs">
+                                                            <span class="avatar-title bg-primary rounded-circle font-size-16">
+                                                                <i class="${item.icon}"></i>
+                                                            </span>
+                                                        </div>
+                                                    </div>
+                                                    <div class="flex-grow-1">
+                                                            <h6 class="mb-1">${item.type}</h6>
+                                                        <div class="font-size-12 text-muted">
+                                                                <p class="mb-1">${item.description}</p>
+                                                            <p class="mb-0"><i class="mdi mdi-clock-outline"></i> 3 min ago</p>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </a>
+
+                    `)
+
+
+
+            )
+
+
+        })
+            
+    }
+    
+ 
+</script>
 
 @await RenderSectionAsync("Scripts", false);
