--- a/IsEmirleri.Web/Views/Mission/Index.cshtml
+++ b/IsEmirleri.Web/Views/Mission/Index.cshtml
@@ -78,6 +78,7 @@
         $(document).ready(() => {
             DataTable = $("#tblMission").DataTable({
                 ajax: '/Mission/GetAll',
+                dataSrc: '',
                 columns: [
                     { data: 'id', title: 'ID' },
                     { data: 'title', title: 'Başlık' },
